--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="page">
-    <!-- <header class="header">
+    <header class="header">
       <img class="logo logo_place_header" src="images/logo_place_header.png" alt="Epic ponderer stood on a mountaintop
       deliberating over the finer points of the modern educational
       system, while also wondering where that giant blue square came
@@ -39,55 +39,64 @@
                 effective learning.</p>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="techniques">
         <h2 class="section-title">Learning Techniques</h2>
         <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image">
+            <img class="cards__image" src="images/images_sprint-2/cards-attention.png" alt="hands holding a book">
             <h3 class="cards__title">Two Ways of Thinking</h3>
             <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image">
+            <img class="cards__image" src="images/images_sprint-2/cards-recall.png" alt="a marble statue">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Improving your ability to remember key bits of information to connect different parts of the brain.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image">
+            <img class="cards__image" src="images/images_sprint-2/cards-interleaving.png" alt="people at a landmark">
             <h3 class="cards__title">Interleaving</h3>
             <p class="cards__description">When you learn multiple skills at the same time, they reinforce each other.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image">
+            <img class="cards__image" src="images/images_sprint-2/cards-question.png" alt="a man in a large room">
             <h3 class="cards__title">Questions</h3>
             <p class="cards__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
           </div>
           <div class="cards__item">
-            <img class="cards__image">
+            <img class="cards__image" src="images/images_sprint-2/cards-competence.png" alt="a hand holding multiple books">
             <h3 class="cards__title">Illusion of Competence</h3>
             <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different setting. Only then can you be truly certain you've understood something.</p>
           </div>
         </div>
       </section>
 
-      <!-- <section class="video">
+      <section class="video">
         <h2 class="section-title">TED Talks</h2>
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
           <div class="video__iframe">
-
+            <iframe frameborder="0" width="515" height="316"  src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe frameborder="0" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           </div>
         </div>
       </section>
 
       <section class="oakley">
           <div class="two-columns">
-            <h2 class="two-columns__brief"></h2>
+            <h2 class="two-columns__brief">Barbara Oakley’s story.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
+                Math didn't come naturally to Barbara in childhood. She thought of herself as more of a 
+                humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after 
+                school she enlisted in the army, who sent her to learn Russian. After several years of service, 
+                during which she rose to the rank of Captain, Barbara left the army and decided to study 
+                engineering. In was during this time that she developed her learning methodology as she was 
+                forced to reprogram her brain for a different kind of learning. It turns out that when something 
+                doesn't come naturally to you, having to work hard to gain the knowledge that other people 
+                may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
               </p>
             </div>
           </div>
@@ -142,14 +151,17 @@
 
       <section class="khan">
         <div class="khan__container">
-            <p class="khan__author"></p>
-            <h2 class="khan__title"></h2>
-            <p class="khan__quote"></p>
-            <p class="khan__quote-author"></p>
-            <p class="khan__quote-author-subline"></p>
+            <p class="khan__author">Salman Khan</p>
+            <h2 class="khan__title">The One World Schoolhouse</h2>
+            <p class="khan__quote">Sal Khan's passion and innovation is transforming learning for millions of 
+              students worldwide. The One World Schoolhouse is a must-read for all 
+              who are committed to improving education so students everywhere can 
+              gain the skills and knowledge to be successful in school, careers and life.</p>
+            <p class="khan__quote-author">George Lucas</p>
+            <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic">
-            <p class="khan__buy-link"></p>
+            <img class="khan__book-pic" src="images/images_sprint-2/khan-book-2.png" alt="A picture of a book by khan">
+            <p class="khan__buy-link" href="#">Buy book →</p>
           </div>
         </div>
       </section>
@@ -203,13 +215,17 @@
       </section>
 
       <section class="resources">
-        <h2 class="section-title"></h2>
-        <p class="section-subtitle"></p>
-        <div class="resources__logo-zone"></div>
-        <img class="resources__logo">
-      </section>
+        <h2 class="section-title">Useful resources</h2>
+        <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
+        <div class="resources__logo-zone">
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-tedED.png"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-Medium.png"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-dezeen.png"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-goodreads.png"></a>
+        </div>
+      </section> 
 
-    </main>
+     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
@@ -232,7 +248,7 @@
           </ul>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </div>
 </body>
 </html>
