--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe frameborder="0" width="515" height="316"  src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
-            <iframe frameborder="0" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
+            <iframe frameborder="0" width="515" height="316"  src="https://www.youtube.com/embed/5MgBikgcWnY">A TED Talk by Joshh Kaufman</iframe>
+            <iframe frameborder="0" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU">A TED Talk by Tim Urban</iframe>
           </div>
         </div>
       </section>
@@ -161,7 +161,7 @@
             <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/images_sprint-2/khan-book-2.png" alt="A picture of a book by khan">
-            <p class="khan__buy-link" href="#">Buy book →</p>
+            <p class="khan__buy-link"><a class="header__link" href="#">Buy book →</a></p>
           </div>
         </div>
       </section>
@@ -218,10 +218,10 @@
         <h2 class="section-title">Useful resources</h2>
         <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
         <div class="resources__logo-zone">
-          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-tedED.png"></a>
-          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-Medium.png"></a>
-          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-dezeen.png"></a>
-          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-goodreads.png"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-tedED.png" alt="tedED"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-Medium.png" alt="Medium"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-dezeen.png" alt="dezeen"></a>
+          <a href="#"><img class="resources__logo" src="images/images_sprint-2/logo/resources-goodreads.png" alt="goodreads"></a>
         </div>
       </section> 
 
