--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe frameborder="0" width="515" height="316"  src="https://www.youtube.com/embed/5MgBikgcWnY">A TED Talk by Joshh Kaufman</iframe>
-            <iframe frameborder="0" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU">A TED Talk by Tim Urban</iframe>
+            <iframe src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           </div>
         </div>
       </section>
