--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/images_sprint-2/khan-book-2.png" alt="A picture of a book by khan">
-            <p class="khan__buy-link"><a class="header__link" href="#">Buy book →</a></p>
+            <p class="khan__buy-link"><a class="khan__buy-link" href="#">Buy book →</a></p>
           </div>
         </div>
       </section>
