project 2 2nd submit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header__title">Learning How to Learn</h1>
       <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life. <a class="header__link" href="#">Learn More →</a></p>
       <img src="images/header-image.png" alt="Man standing on mountain" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotate"></div>
     </header>
 
     <main class="content">
@@ -77,10 +77,8 @@
         <h2 class="section-title">TED Talks</h2>
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
-          <div class="video__iframe">
-            <iframe src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
-            <iframe src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
-          </div>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0"></iframe>
         </div>
       </section>
 
@@ -211,7 +209,7 @@
               <p class="table__text table__text_theme_dark">Emphasize quanity and speed</p>
           </li>
         </ul>
-      <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
+      <img class="kaufman__triangle rotate" src="images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
 
       <section class="resources">
