--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <h2 class="section-title">TED Talks</h2>
         <p class="section-subtitle">For lovers of procrastination</p>
         <div class="video__iframes">
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0"></iframe>
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
         </div>
       </section>
 
