--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>Learning how to learn</title>
 </head>
@@ -159,7 +158,7 @@
             <p class="khan__quote-author-subline">Filmmaker</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/images_sprint-2/khan-book-2.png" alt="A picture of a book by khan">
-            <p class="khan__buy-link"><a class="khan__buy-link" href="#">Buy book →</a></p>
+            <a class="khan__buy-link" href="#">Buy book →</a>
           </div>
         </div>
       </section>
