--- a/index.html
+++ b/index.html
@@ -167,23 +167,23 @@
         <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
         <p class="section-subtitle section-subtitle_theme_dark">By Josh Kaufman</p>
         <ul class="table table_theme_dark">
-          <li class="table__cell table__cell_theme_dark table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Choose a loveable project</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">Define your target performance level</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Obtain critical tools</p>
           </li>
