--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
         <h2 class="section-title" >Facts and figures</h2>
         <p class="section-subtitle">On learning and the brain</p>
         <ul class="table">
-          <li class="table__cell table__padding">
+          <li class="table__cell">
               <h3 class="table__heading" >86 Billion</h3>
               <p class="table__text">The number of neurons in the human brain</p>
           </li>
-          <li class="table__cell table__padding">
+          <li class="table__cell">
               <h3 class="table__heading" >73%</h3>
               <p class="table__text">The percentage of adults in the US who considers themselves lifelong learners</p>
               <p class="table__text">Pew Research Centere</p>
           </li>
-          <li class="table__cell table__padding">
+          <li class="table__cell">
               <h3 class="table__heading">1,000 terabytes</h3>
               <p class="table__text">The information storage capacity of a human</p>
           </li>
-          <li class="table__cell table__padding">
+          <li class="table__cell">
               <h3 class="table__heading">500 trillion</h3>
               <p class="table__text">The number of nerve synapses responsible for learning in the average adult human</p>
           </li>
@@ -167,23 +167,23 @@
         <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill aquisition</h2>
         <p class="section-subtitle section-subtitle_theme_dark">By Josh Kaufman</p>
         <ul class="table table_theme_dark">
-          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Choose a loveable project</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">Define your target performance level</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills</p>
           </li>
-          <li class="table__cell table__cell_theme_dark table__padding table__padding_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Obtain critical tools</p>
           </li>
